# AgentForPaper

./: .env.example  .gitignore  README.md  paper_profile.example.md  pyproject.toml
.kiro/specs/academic-paper-writing-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/inplace-polish-audit/: design.md  (+2 more)
eval/: README.md
examples/minimal_artifact/: README.md  artifact.yaml  notes.md
scripts/: chat.py  render.py  run_eval.py  run_real.py  smoke_agent.py  trace_view.py
src/paper_agent/: __init__.py  app.py  clarification.py  config.py  docx_inplace.py  draft_analyzer.py  elicitation.py  entry.py  hooks.py  inplace_augment.py  inplace_core.py  latex_inplace.py  orchestrator.py  profile.py
tests/: conftest.py  test_acceptance.py  test_acceptance_finalize.py  test_adversarial_review.py  test_agent_platform_agent_intake.py  test_agent_platform_app.py  test_agent_platform_apply.py  test_agent_platform_chat.py  test_agent_platform_import_addsection.py  test_agent_platform_integration.py  test_agent_platform_models.py  test_agent_platform_properties.py  test_agent_platform_readonly_tools.py  test_agent_platform_wave4.py  test_agent_platform_write_tools.py  test_anthropic_provider.py  test_artifact_contract.py  test_ask_user_tool.py  test_assembly_stack.py  test_audit_assembly.py  test_audit_props.py  test_audit_report.py  test_augment_props.py  test_augment_terminal.py  test_augment_tool.py  test_batch4a.py  test_chat_acceptance.py  test_chat_retrieval_failfast.py  test_chat_routing.py  test_chat_streaming_workflow_reply.py  test_citation.py  test_citation_audit.py  test_citation_closure.py  test_citation_marker_fix.py  test_clarification.py  test_context_and_figures.py  test_convert_locked_output.py  test_convert_remembers_source.py  test_convert_table_center.py  test_convert_table_fix.py  (+114 more)
(+201 files in other folders)
